--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     font-family:'naruto-font';
     outline: none;
 }
+
 .container{
    display: flex;
    align-items: center;
@@ -18,6 +19,7 @@
 #new-btn{
     margin-top: 20px;
 }
+
 .screen{
     width: 300px;
     height: 100px;
@@ -27,12 +29,15 @@
     background-repeat: no-repeat;
     text-align: center;
 }
+
 .screen p{
     margin-top: 20px;
 }
+
 #spacer{
     width: 100px;
 }
+
 .row{
     padding: 5px;
 }
@@ -45,6 +50,32 @@
     width : 40px;
     height : 40px;
     border-radius: 50%;
+}
+
+#instructions{
+    position: fixed;
+    margin: 0 auto;
+    display: none;
+    width: 400px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 2px 0px 2px;
+    z-index:99999;
+}
+
+#instructions ul{
+    list-style: none;
+}
+
+#hint{
+    position: fixed;
+    text-align: center;
+    width: 400px;
+    padding: 50px;
+}
+
+#hint #hint-p{
+    color: #fff;
 }
 
 #hint-btn{
@@ -65,8 +96,8 @@
 }
 
 #character{
-    width: 70px;
-    height: 90px;
+    width: 50px;
+    height: 70px;
     background-image: url("../assets/char_sasuke.png");
     background-size: cover;
     flex: 1;
@@ -76,7 +107,7 @@
 
 #attack{
     flex: 1;
-    bottom: 0px;
+    bottom: -6px;
     position: absolute;
     z-index: 9999;
 }
@@ -94,10 +125,10 @@
 
 /**** attack animations *****/
 .attack-stage-1 {
-    width: 70px;
+    width: 50px;
     height: 20px;
     background-image: url("../assets/amat_animate_v1.png");
-    animation: attack-stage-1-animation .8s steps(10) infinite;
+    animation: attack-stage-1-animation .8s steps(2) infinite;
 }
 
 .attack-stage-2 {
@@ -116,7 +147,7 @@
 
 @keyframes attack-stage-1-animation {
    from { background-position:    0px; }
-     to { background-position: -500px; }
+     to { background-position: -70px; }
 }
 @keyframes attack-stage-2-animation {
    from { background-position:    0px; }
